# mmbot

./: .brokers  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Doxyfile  LICENSE  README.md  brokers  build  deb_build  post_update.sh  testfile  update  update_new_web  version.h
backtest/: bchczk_20190712_20200229.csv  btcusd_20190630_20200410.csv  dashczk_20190712_20200229.csv  ethusd_20190716_20200313.csv  grinbtc_20190606_20200410.csv  xrpczk_20190610_20200228.csv
conf/: .gitignore  brokers.conf  couchdb_storage.conf  ident  ident.conf  markettrader.conf  mmbot.conf  mmbot.pkg.conf  report_broker.conf  storage_broker.conf  traders.conf  traders.conf.ex  web_admin.conf
conf/brokers/: binance.conf  coinmate.conf  deribit.conf  poloniex.conf
debian/: .gitignore  changelog  conffiles  control  copyright  mmbot.install  mmbot.postinst  mmbot.service  rules
doc/: backtest_api_cz.md  broker_protocol.md  cli.md  config_cs.md  cs.md  daily_performance_log.md  deribit_bitmex_cs.md  install.md  navrh_protokolu_strategie_cs.md  proxy.md  reports_api.md  tipy_nastaveni_cs.md  webadmin_cs.md
secure_data/: coinmate
src/binance/: CMakeLists.txt  config.cpp  config.h  main.cpp  proxy.cpp  proxy.h
src/bitfinex/: CMakeLists.txt  interface.cpp  interface.h  main.cpp  structs.cpp  structs.h
src/bitmex/: CMakeLists.txt  main.cpp  proxy.cpp  proxy.h
src/brokers/: .gitignore  CMakeLists.txt  api.cpp  api.h  api_v1.cpp  api_v2.cpp  httpjson.cpp  httpjson.h  isotime.h  orderdatadb.cpp  orderdatadb.h  timesync.h  ws_support.cpp  ws_support.h
src/brokers/binance/: CMakeLists.txt  main.cpp  names.h  proxy.cpp  proxy.h
src/brokers/bitfinex/: CMakeLists.txt  interface.cpp  interface.h  structs.cpp  structs.h
src/brokers/bitmex/: CMakeLists.txt  main.cpp  proxy.cpp  proxy.h
src/brokers/bybit/: CMakeLists.txt  bybitbroker.cpp  bybitbroker.h  main.cpp
src/brokers/bybit_v5/: ByBitBrokerV5.cpp  BybitBrokerV5.h  CMakeLists.txt  main.cpp  rsa_tools.cpp  rsa_tools.h
src/brokers/coinbase/: CMakeLists.txt  coinbase_advanced.cpp  coinbase_advanced.h  main.cpp  orderbook.cpp  orderbook.h  orderlist.cpp  orderlist.h
src/brokers/coingi/: CMakeLists.txt  main.cpp
src/brokers/coinmate/: CMakeLists.txt  main.cpp  proxy.cpp  proxy.h
src/brokers/couchdb_storage/: CMakeLists.txt  main.cpp
src/brokers/couchdb_storage/conf/: couchdb_storage.conf
src/brokers/datasrc/: CMakeLists.txt  main.cpp
src/brokers/deribit/: CMakeLists.txt  main.cpp  proxy.cpp  proxy.h
src/brokers/ftx/: CMakeLists.txt  interface.cpp  interface.h  main.cpp
src/brokers/gokumarket/: CMakeLists.txt  gokumarket.cpp  gokumarket.h  main.cpp
src/brokers/kraken/: CMakeLists.txt  interface.cpp  interface.h  main.cpp
src/brokers/kucoin/: CMakeLists.txt  kucoin.cpp  kucoin.h  main.cpp
src/brokers/mylocalbroker/: CMakeLists.txt  main.cpp  mylocalbroker.cpp  mylocalbroker.h
src/brokers/okex/: CMakeLists.txt  interface.cpp  interface.h  main.cpp
src/brokers/okx/: CMakeLists.txt  interface.cpp  interface.h  main.cpp
src/brokers/poloniex/: CMakeLists.txt  main.cpp  proxy.cpp  proxy.h
src/brokers/replay/: CMakeLists.txt  interface.cpp  interface.h  main.cpp
src/brokers/rptbroker/: CMakeLists.txt  aggregate.h  database.cpp  database.h  main.cpp  trade_report.cpp  trade_report.h
src/brokers/simplefx/: CMakeLists.txt  datasrc.h  fndef.h  lexid.h  main.cpp  market.cpp  market.h  quotedist.cpp  quotedist.h  quotestream.cpp  quotestream.h  tradingengine.cpp  tradingengine.h
src/brokers/southxchange/: CMakeLists.txt  interface.cpp  interface.h  main.cpp
src/brokers/tradeogre/: CMakeLists.txt  main.cpp  tradeogre.cpp  tradeogre.h
src/brokers/trainer/: CMakeLists.txt  cryptowatch.cpp  cryptowatch.h  main.cpp  txt2cpp.sh
src/brokers/xtb/: CMakeLists.txt  assets.cpp  assets.h  client.cpp  client.h  interface.cpp  interface.h  main.cpp  orders.cpp  orders.h  position_control.cpp  position_control.h  ratio.cpp  ratio.h  send_block.h  streaming.cpp  streaming.h  test.cpp  test.h  test2.h.in  types.cpp  types.h  ws.h
src/coinbase/: CMakeLists.txt  main.cpp
src/coingi/: main.cpp
src/coinmate/: CMakeLists.txt  config.cpp  config.h  main.cpp  proxy.cpp  proxy.h
src/deribit/: CMakeLists.txt  config.cpp  config.h  main.cpp  proxy.cpp  proxy.h
src/emulator/: CMakeLists.txt  main.cpp
src/ftx/: interface.cpp  interface.h
src/main/: CMakeLists.txt  abstractExtern.cpp  abstractExtern.h  abstractStrategy.h  abstractarray.h  abstractbrokerproxy.h  acb.h  alert.h  apikeys.h  auth.cpp  auth.h  authmapper.cpp  authmapper.h  backtest.cpp  backtest.h  backtest2.cpp  backtest2.h  backtest_broker.cpp  backtest_broker.h  bollinger_spread.cpp  bollinger_spread.h  brokerlist.h  btstore.cpp  btstore.h  calculator.cpp  calculator.h  clone_ptr.h  core.cpp  core.h  default_spread_generator.cpp  default_spread_generator.h  dynmult.cpp  dynmult.h  ema.h  emstdev.h  emulatedLeverageBroker.cpp  emulatedLeverageBroker.h  emulator.cpp  emulator.h  errhandler.cpp  (+166 more)
src/poloniex/: CMakeLists.txt  config.cpp  config.h  main.cpp  orderdatadb.cpp  orderdatadb.h  proxy.cpp  proxy.h
src/report/: CMakeLists.txt  main.cpp
src/report/couchdb/: _design_control.json  collect_rates.conf  collect_rates.sh
src/report_broker/: CMakeLists.txt
src/simplefx/: CMakeLists.txt  datasrc.h  fndef.h  httpjson.cpp  httpjson.h  lexid.h  log.h  main.cpp  market.cpp  market.h  quotestream.cpp  quotestream.h  tradingcontrol.cpp  tradingcontrol.h  tradingengine.cpp  tradingengine.h
src/storage_broker/: CMakeLists.txt  main.cpp
src/trainer/: CMakeLists.txt  index.html  main.cpp
test_data/: run_backtest.sh  trader.json
www/: code.js  index.html  index2.dev.html  index2.html  manifest.json  style.css  sw.js
www/admin/: code.js  config.js  dlgs.js  formbld.js  index.html  io.js  lang.js  main.js  page.css  style.css
www/admin_old/: code.js  style.css
www/chart_test/: chart.js  chart_old.js  code.js  index.html
www/res/: auth.cpp  chart.css  chart.js  code.js  common.js  style.css  template.js  ui.css  ui.js
www/share/: index.html
(+19 files in other folders)
