cmake_minimum_required(VERSION 2.8)
project (mmbot)

EXEC_PROGRAM(uname OUTPUT_VARIABLE SYSTEM_NAME)
SET(SYSTEM_NAME "${SYSTEM_NAME}" CACHE INTERNAL "")

IF(SYSTEM_NAME STREQUAL "Linux")
   MESSAGE("-- Detected Linux system")
   LINK_LIBRARIES( stdc++fs)
ENDIF(SYSTEM_NAME STREQUAL "Linux")

IF(SYSTEM_NAME STREQUAL "FreeBSD")
   MESSAGE("-- Detected FreeBSD system")
   LINK_LIBRARIES(execinfo)   
ENDIF(SYSTEM_NAME STREQUAL "FreeBSD")
LINK_LIBRARIES(ssl crypto pthread)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/)

include_directories(BEFORE src/imtjson/src src/server/src src )
add_compile_options(-std=c++17)
add_compile_options(-Wall -Wno-noexcept-type)

add_subdirectory (src/imtjson/src/imtjson EXCLUDE_FROM_ALL)
add_subdirectory (src/server/src/simpleServer EXCLUDE_FROM_ALL)
add_subdirectory (src/brokers EXCLUDE_FROM_ALL)
add_subdirectory (src/main)
add_subdirectory (src/brokers/binance)
add_subdirectory (src/brokers/bitfinex)
add_subdirectory (src/brokers/bitmex)
add_subdirectory (src/brokers/coinbase)
add_subdirectory (src/brokers/coingi)
add_subdirectory (src/brokers/coinmate)
add_subdirectory (src/brokers/deribit)
add_subdirectory (src/brokers/datasrc)
add_subdirectory (src/brokers/ftx)
add_subdirectory (src/brokers/kraken)
add_subdirectory (src/brokers/kucoin)
add_subdirectory (src/brokers/poloniex)
add_subdirectory (src/brokers/okex)
add_subdirectory (src/brokers/simplefx)
add_subdirectory (src/brokers/southxchange)
add_subdirectory (src/brokers/trainer)
add_subdirectory (src/brokers/couchdb_storage)

if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  set(CMAKE_INSTALL_PREFIX "/opt/mmbot" CACHE PATH "Default path to install" FORCE)
endif()

install(PROGRAMS bin/mmbot DESTINATION bin)
install(DIRECTORY bin/brokers DESTINATION bin USE_SOURCE_PERMISSIONS)
install(FILES conf/mmbot.conf conf/brokers.conf DESTINATION "conf") 
install(FILES conf/mmbot.pkg.conf DESTINATION "conf" RENAME "local.conf") 
install(FILES www/index.html www/manifest.json www/sw.js DESTINATION "www") 
install(DIRECTORY www/admin DESTINATION "www")
install(DIRECTORY www/res DESTINATION "www")
install(DIRECTORY DESTINATION "data")
install(DIRECTORY DESTINATION "secure_data")
install(DIRECTORY DESTINATION "run")
install(DIRECTORY DESTINATION "log")
